parser/src/snapshots/rustpython_parser__context__tests__aug_assign_attribute.snap
---
source: parser/src/context.rs
expression: parse_ast
---
[
    AugAssign(
        StmtAugAssign {
            target: Attribute(
                ExprAttribute {
                    value: Name(
                        ExprName {
                            id: Identifier(
                                "x",
                            ),
                            ctx: Load,
                            range: 0..1,
                        },
                    ),
                    attr: Identifier(
                        "y",
                    ),
                    ctx: Store,
                    range: 0..3,
                },
            ),
            op: Add,
            value: Tuple(
                ExprTuple {
                    elts: [
                        Constant(
                            ExprConstant {
                                value: Int(
                                    1,
                                ),
                                kind: None,
                                range: 8..9,
                            },
                        ),
                        Constant(
                            ExprConstant {
                                value: Int(
                                    2,
                                ),
                                kind: None,
                                range: 11..12,
                            },
                        ),
                        Constant(
                            ExprConstant {
                                value: Int(
                                    3,
                                ),
                                kind: None,
                                range: 14..15,
                            },
                        ),
                    ],
                    ctx: Load,
                    range: 7..16,
                },
            ),
            range: 0..16,
        },
    ),
]
