parser/src/snapshots/rustpython_parser__context__tests__aug_assign_name.snap
---
source: parser/src/context.rs
expression: parse_ast
---
[
    AugAssign(
        StmtAugAssign {
            target: Name(
                ExprName {
                    id: Identifier(
                        "x",
                    ),
                    ctx: Store,
                    range: 0..1,
                },
            ),
            op: Add,
            value: Constant(
                ExprConstant {
                    value: Int(
                        1,
                    ),
                    kind: None,
                    range: 5..6,
                },
            ),
            range: 0..6,
        },
    ),
]
