parser/src/snapshots/rustpython_parser__context__tests__aug_assign_subscript.snap
---
source: parser/src/context.rs
expression: parse_ast
---
[
    AugAssign(
        StmtAugAssign {
            target: Subscript(
                ExprSubscript {
                    value: Name(
                        ExprName {
                            id: Identifier(
                                "x",
                            ),
                            ctx: Load,
                            range: 0..1,
                        },
                    ),
                    slice: Name(
                        ExprName {
                            id: Identifier(
                                "y",
                            ),
                            ctx: Load,
                            range: 2..3,
                        },
                    ),
                    ctx: Store,
                    range: 0..4,
                },
            ),
            op: Add,
            value: Tuple(
                ExprTuple {
                    elts: [
                        Constant(
                            ExprConstant {
                                value: Int(
                                    1,
                                ),
                                kind: None,
                                range: 9..10,
                            },
                        ),
                        Constant(
                            ExprConstant {
                                value: Int(
                                    2,
                                ),
                                kind: None,
                                range: 12..13,
                            },
                        ),
                        Constant(
                            ExprConstant {
                                value: Int(
                                    3,
                                ),
                                kind: None,
                                range: 15..16,
                            },
                        ),
                    ],
                    ctx: Load,
                    range: 8..17,
                },
            ),
            range: 0..17,
        },
    ),
]
