parser/src/snapshots/rustpython_parser__context__tests__del_attribute.snap
---
source: parser/src/context.rs
expression: parse_ast
---
[
    Delete(
        StmtDelete {
            targets: [
                Attribute(
                    ExprAttribute {
                        value: Name(
                            ExprName {
                                id: Identifier(
                                    "x",
                                ),
                                ctx: Load,
                                range: 4..5,
                            },
                        ),
                        attr: Identifier(
                            "y",
                        ),
                        ctx: Del,
                        range: 4..7,
                    },
                ),
            ],
            range: 0..7,
        },
    ),
]
