parser/src/snapshots/rustpython_parser__context__tests__del_name.snap
---
source: parser/src/context.rs
expression: parse_ast
---
[
    Attributed {
        custom: (),
        node: Delete(
            StmtDelete {
                targets: [
                    Attributed {
                        custom: (),
                        node: Name(
                            ExprName {
                                id: Identifier(
                                    "x",
                                ),
                                ctx: Del,
                                range: 4..5,
                            },
                        ),
                    },
                ],
                range: 0..5,
            },
        ),
    },
]
