parser/src/snapshots/rustpython_parser__context__tests__del_subscript.snap
---
source: parser/src/context.rs
expression: parse_ast
---
[
    Delete(
        StmtDelete {
            targets: [
                Subscript(
                    ExprSubscript {
                        value: Name(
                            ExprName {
                                id: Identifier(
                                    "x",
                                ),
                                ctx: Load,
                                range: 4..5,
                            },
                        ),
                        slice: Name(
                            ExprName {
                                id: Identifier(
                                    "y",
                                ),
                                ctx: Load,
                                range: 6..7,
                            },
                        ),
                        ctx: Del,
                        range: 4..8,
                    },
                ),
            ],
            range: 0..8,
        },
    ),
]
